@@ -42,8 +42,8 @@
     </div>
 
     <div id="lang_navigation" style="display: none;">
-        <a class="de" href="{LANG_CHANGE_DE}">Deutsch</a><br />
-        <a class="en" href="{LANG_CHANGE_EN}">English</a><br />
+        <a class="de" href="{LANG_CHANGE_DE}" class="{LANG_SELECTED_DE}">Deutsch</a><br />
+        <a class="en" href="{LANG_CHANGE_EN}" class="{LANG_SELECTED_EN}">English</a><br />
         <!-- <a class="fr" href="index.php?setLang=3">Francais</a><br /> -->
     </div>
 
