@@ -19,6 +19,7 @@ Allgemein
 - Neu, über den Modul Manager installierte Module, erscheinen nicht in der
   Inhalts Navigation.
 - Thumbnail-Erstellung von Transparenten Bildern wird nun unterstützt.
+- Das Sprachselektionsmenu hat nun eine "selected" CSS-Klasse gesetzt für die aktive Sprache
 
 File Browser
 - Beim Datei-Upload kann zwischen dem normalen Upload oder der Verwendung des
